storage/connect/tabmul.cpp
@@ -197,7 +197,7 @@ bool TDBMUL::InitFileNames(PGLOBAL g)
 
 #else   // !WIN32
     struct stat fileinfo;
-    char   fn[PATH_MAX], direc[PATH_MAX], pattern[256], ftype[8];
+    char   fn[FN_REFLEN], direc[C], pattern[256], ftype[8];
     DIR   *dir;
     struct dirent *entry;
 
